# raypack

./: .gitignore  .markdownlintrc  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CHANGES.md  Makefile  README.md  pyproject.toml  pyproject_template.toml  requirements_in_glue_2023_11_7.txt  requirements_to_pyproject.py  tox.ini
.github/workflows/: build.yml  tox.yml
docs/: CREDIT.md  TODO.md
raypack/: __init__.py  __main__.py  aws_interface.py  build.py  config_loading.py  deploy.py  logging_utils.py  poetry_interface.py  pyproject_interface.py  setuptools_interface.py
test/: test_aws_interface.py  test_main.py  test_poetry_interface.py  test_pyproject_interface.py  tox_banner.py
