[tool.poetry]
name = "raypack"
version = "0.3.0"
description = "Unofficial AWS Glue Ray.io packaging tool. Pure python or cross platform."
authors = ["Matthew Martin <matthewdeanmartin@gmail.com>"]
keywords = ["awsglue", "ray.io", "aws glue"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
include = [
    "raypack/**/*.py",
    "raypack/**/*.md",
    "raypack/**/*.txt",
    "raypack/**/*.html",
    "raypack/**/*.jinja",
]
exclude = [
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/matthewdeanmartin/raypack"
homepage = "https://github.com/matthewdeanmartin/raypack"
documentation ="https://github.com/matthewdeanmartin/raypack"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/matthewdeanmartin/raypack/issues"
"Change Log" = "https://github.com/matthewdeanmartin/raypack/blob/main/CHANGES.md"

[tool.poetry.dependencies]
python = ">=3.9"
boto3 = ">=1.28.71"
toml =">=0.10.2"

[tool.poetry.scripts]
raypack = 'raypack.__main__:main'


[tool.poetry.dev-dependencies]
mdformat = ">=0.7.17"
pytest = ">=7.4.3"
vermin = ">=1.5.2"
hypothesis = {extras = ["cli"], version = ">=6.88.1"}
pre-commit = ">=3.5.0"
mypy = ">=1.6.1"
pytest-cov = "*"
ruff = "*"
types-toml = "*"
tox = "*"

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
junit_family = "xunit1"
norecursedirs = ["vendor", "scripts"]
# don't know how to do this in toml
#addopts = "--strict-markers"
#markers =
#	slow: marks tests as slow (deselect with '-m "not slow"')
#	fast: marks tests as fast (deselect with '-m "not fast"')

[tool.isort]
default_section = "THIRDPARTY"
force_grid_wrap = 0
include_trailing_comma = true
known_first_party = ["raypack"]
line_length = 88
multi_line_output = 3
use_parentheses = true

[tool.ruff]
line-length = 1000

# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F"]
ignore = [
    "E722",
    "E501",
]

# Exclude a variety of commonly ignored directories.
exclude = [
    "dead_code",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "hide"
]
per-file-ignores = { }

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py311"

[tool.scriv]
format = "md"
version = "literal: pyproject.toml: project.version"

[tool.hatch.version]
path = "raypack/__init__.py"
output_file = "CHANGELOG.${config:format}"

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
strict = true
ignore_missing_imports = true
